--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # https://docs.github.com/en/enterprise-server@2.21/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/about-code-owners
 
-* @john-navitsky @ian-ryan @larry-tordsen @joshua-plautz
+* @JohnNavitskyHPE @larry-tordsen @joshua-plautz
